apps/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.lachgarazzeddine.me
        - k8s.lachgarazzeddine.me
      secretName: multi-app-tls
  rules:
    - host: app.lachgarazzeddine.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
    - host: k8s.lachgarazzeddine.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-test-app
                port:
                  number: 80
